<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/nav_option_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@color/text"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/nav_option_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="Compartir Aplicación"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_support"
        android:title="Contactar Soporte"
        app:showAsAction="never" />
</menu>