<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background1"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="9dp"
            android:text="@string/cancel"
            android:textColor="@color/accent"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/accent"
            android:text="@string/publish"
            android:textAllCaps="false"
            android:textColor="@color/background1"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/nav_divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/lines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_area" />

    <View
        android:id="@+id/nav_divider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/lines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/background1"
        app:itemTextColor="@color/text"
        app:itemIconTint="@color/text"
        app:menu="@menu/bottom_nav_menu"
        />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/background2"

        app:layout_constraintBottom_toTopOf="@+id/nav_divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_divider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="90dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:background="#E0E0E0"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_gallery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text=""
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintTop_toTopOf="@+id/iv_movie_poster" />

            <TextView
                android:id="@+id/tv_movie_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text=""
                android:textColor="@color/text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_movie_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

            <TextView
                android:id="@+id/tv_movie_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text=""
                android:textColor="@color/text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_movie_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_year" />

            <EditText
                android:id="@+id/et_review"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="35dp"
                android:background="@drawable/bg_curved_edge"
                android:gravity="top|start"
                android:hint="@string/write_review"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster" />

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:progressTint="@color/accent"
                android:layout_margin="5dp"
                android:stepSize="1.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_review" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</ScrollView>